<?xml version="1.0"?><package format="2"><name>rover_control</name><version>0.0.1</version><description>Controllers for rover</description><maintainer email="you@example.com">ToolBox Robotics</maintainer><license>MIT</license><exec_depend>roscpp</exec_depend><exec_depend>controller_manager</exec_depend><exec_depend>ros_control</exec_depend></package>
