<?xml version="1.0"?><package format="2"><name>rover_description</name><version>0.0.1</version><description>URDF for rover</description><maintainer email="you@example.com">ToolBox Robotics</maintainer><license>MIT</license><buildtool_depend>catkin</buildtool_depend><exec_depend>xacro</exec_depend></package>
